# voxblox-plusplus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  package.xml  voxblox-plusplus_https.rosinstall  voxblox-plusplus_ssh.rosinstall
.github/: stale.yml
ci/: prepare-jenkins-slave.sh
global_feature_map/: CMakeLists.txt  package.xml
global_feature_map/include/global_feature_map/: feature_block.h  feature_block_inl.h  feature_integrator.h  feature_layer.h  feature_layer_inl.h  feature_types.h  feature_utils.h  feature_utils_inl.h
global_feature_map/proto/global_feature_map/: FeatureBlock.proto  FeatureLayer.proto
global_feature_map/src/: feature_block.cc  feature_integrator.cc  feature_layer.cc  feature_types.cc
global_feature_map/test/: test_feature_map.cc
global_segment_map/: CMakeLists.txt  package.xml
global_segment_map/include/global_segment_map/: common.h  icp_utils.h  label_block.h  label_fusion.h  label_interpolator.h  label_merge_integrator.h  label_tsdf_integrator.h  label_tsdf_map.h  label_tsdf_mesh_integrator.h  label_voxel.h  layer_evaluation.h  layer_evaluation_inl.h  segment.h  semantic_instance_label_fusion.h
global_segment_map/include/global_segment_map/meshing/: instance_color_map.h  label_color_map.h  label_tsdf_mesh_integrator.h  semantic_color_map.h
global_segment_map/include/global_segment_map/utils/: file_utils.h  icp.h  icp_utils.h  label_utils.h  label_voxel_utils.h  layer_utils.h  map_utils.h  meshing_utils.h  semantic_color_map.h  visualization.h  visualizer.h
global_segment_map/src/: icp_utils.cc  label_block.cc  label_block_serialization.cc  label_fusion.cc  label_merge_integrator.cc  label_tsdf_integrator.cc  label_tsdf_map.cc  label_utils.cc  segment.cc  semantic_instance_label_fusion.cc
global_segment_map/src/meshing/: instance_color_map.cc  label_color_map.cc  label_tsdf_mesh_integrator.cc  semantic_color_map.cc
global_segment_map/src/utils/: icp.cc  icp_utils.cc  label_utils.cc  label_voxel_utils.cc  semantic_color_map.cc  visualizer.cc
global_segment_map/test/: test_icp.cc
global_segment_map_node/: CMakeLists.txt  package.xml
global_segment_map_node/cfg/: InteractiveSlider.cfg  asl_office_floor.yaml  co-fusion.yaml  cofusion_dynamic.yaml  default.yaml  default_topics.yaml  generic.yaml  mobmi_1hz.yaml  mobmi_online.yaml  monstah.yaml  orb_slam2.yaml  royal_panda.yaml  scenenet.yaml  scenenet_dynamic.yaml  scenenn.yaml  scenenn_1hz.yaml  scenenn_dynamic.yaml  sliding_window_monstah.yaml  sliding_window_tango.yaml  tango.yaml  tango_extrinsics.yaml  tf_frames.yaml  tf_frames_primesense.yaml  tf_frames_realsense.yaml  tf_imu_depth.yaml  yumi.yaml
global_segment_map_node/include/global_segment_map_node/: controller.h  conversions.h  feature_ros_tools.h
global_segment_map_node/include/voxblox_gsm/: controller.h  controller_inl.h  conversions.h  feature_ros_tools.h  iodb_controller.h  sliding_window_controller.h
global_segment_map_node/include/voxblox_gsm/sliding_window/: sliding_window_base.h  spatial_sliding_window.h  time_based_sliding_window.h  view_based_sliding_window.h
global_segment_map_node/launch/: asl_office_floor_dataset.launch  cofusion_dynamic.launch  depth_segmentation.launch  gsm.launch  gsm_node.launch  gsm_with_depth_segmentation.launch  gsm_with_depth_segmentation_and_features.launch  gsm_with_depth_segmentation_monstah.launch  instance_segmentation_and_map.launch  mobmi_dataset.launch  monstah.launch  orb_slam2.launch  primesense_gsm.launch  realsense_gsm.launch  rovioli.launch  royal_panda.launch  scenenn_dataset.launch  semantic_instance_mapping.launch  semantic_instance_segmentation_and_mapping.launch  shape_completion.launch  sliding_window_with_depth_segm.launch  sliding_window_with_depth_segmentation.launch  vpp_pipeline.launch  yumi.launch
global_segment_map_node/src/: camera_info_node.cpp  controller.cpp  feature_ros_tools.cpp  iodb_controller.cpp  iodb_node.cpp  legacy_sliding_window_node.cpp  node.cpp  pose_to_tf_node.cpp  sliding_window_controller.cpp  sliding_window_node.cpp
global_segment_map_node/src/ros_utils/: pose_to_tf_node.cpp
global_segment_map_node/src/sliding_window/: sliding_window_base.cpp  spatial_sliding_window.cpp  time_based_sliding_window.cpp  view_based_sliding_window.cpp
global_segment_map_node/srv/: GetAlignedInstanceBoundingBox.srv  GetListSemanticInstances.srv  GetScenePointcloud.srv
include/voxblox_gsm/: controller.h
iodb_node/: CMakeLists.txt  package.xml
iodb_node/cfg/: default.yaml
iodb_node/include/iodb_node/: conversions.h  feature_ros_tools.h  iodb_controller.h  sliding_window_controller.h
iodb_node/launch/: iodb.launch
iodb_node/src/: feature_ros_tools.cpp  iodb_controller.cpp  iodb_node.cpp  pose_to_tf_node.cpp  sliding_window_controller.cpp
src/: controller.cpp  node.cpp
