<?xml version="1.0"?>
<package format="2">
  <name>voxblox_gsm</name>
  <version>0.0.0</version>
  <description>Voxblox based Global Segmentation Map</description>

  <author email="grinvalm@student.ethz.ch">Margarita Grinvald</author>

  <maintainer email="grinvalm@student.ethz.ch">Margarita Grinvald</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>glog_catkin</depend>
  <depend>minkindr_conversions</depend>
  <depend>object_toolbox</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>voxblox</depend>

</package>
