<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_feature_map</name>
  <version>0.0.0</version>
  <description>Global Feature Map voxblox extension</description>

  <author email="tonci.novkovic@gmail.com">Tonci Novkovic</author>
  <author email="marius.b.fehr@gmail.com">Marius Fehr</author>

  <maintainer email="tonci.novkovic@gmail.com">Tonci Novkovic</maintainer>
  <maintainer email="margaritagrinvald@gmail.com">Margarita Grinvald</maintainer>
  <maintainer email="ffurrer@gmail.com">Fadru Furrer</maintainer>
  <maintainer email="marius.b.fehr@gmail.com">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>Boost</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox</depend>
</package>
