<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_segment_map</name>
  <version>0.0.0</version>
  <description>Global Segmentation Map voxblox extension</description>

  <author email="margaritagrinvald@gmail.com">margaritaG</author>

  <maintainer email="margaritagrinvald@gmail.com">margaritaG</maintainer>
  <maintainer email="ffurrer@gmail.com">ffurrer</maintainer>
  <maintainer email="marius.b.fehr@gmail.com">mfehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>voxblox</depend>
</package>
