<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>global_segment_map</name>
  <version>0.0.0</version>
  <description>Voxblox++</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>
  <author email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</author>
  <author email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>global_feature_map</depend>
  <depend>glog_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>voxblox</depend>
</package>
