<?xml version="1.0"?>
<package format="2">
  <name>gsm_node</name>
  <version>0.0.0</version>
  <description>Global Segmentation Map ROS node</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>
  <maintainer email="ffurrer@gmail.com">ffurrer</maintainer>
  <maintainer email="marius.b.fehr@gmail.com">mfehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>minkindr_conversions</depend>
  <depend>modelify_msgs</depend>
  <depend>pcl_catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>voxblox</depend>
  <depend>global_segment_map</depend>
  <depend>global_feature_map</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox_ros</depend>
  <depend>opencv3_catkin</depend>

</package>
